--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,7 @@
       <h4><a href="/doc/how_to_acquire_dmri.html">How to acquire dMRI</a></h4>
       <h4><a href="/doc/how_to_analyze_dmri.html">How to analyze dMRI</a></h4>
       <h4><a href="/doc/how_to_interpret_dmri.html">How to interpret dMRI</a></h4>
+      
       <button type="button" class="collapsible">User Manual (GUI)</button>
       <div class="content">
       <h4><a href="/doc/gui_t1.html">[Step T1] Generate SRC file</a></h4>
@@ -48,12 +49,18 @@
       <h4><a href="/doc/gui_t3_dt.html">[Step T3] Differential Tractography</a></h4>
       <h4><a href="/doc/gui_bx.html">[Step B0-B4] Batch Processing</a></h4>
       <h4><a href="/doc/gui_cx.html">[Step C1-C3] Correlational Tractography</a></h4>
+      </div>
       <br>
-      <h4>Step T3 Tractography Interface</h4>  
+      
+      <button type="button" class="collapsible">User Manual (GUI)</button>
+      <div class="content">
       <h4><a href="/doc/gui_t3_edit.html">[Edit] Menu</a></h4>
       <h4><a href="/doc/gui_t3_regions.html">[Regions] Menu</a></h4>
       <h4><a href="/doc/gui_t3_slices.html">[Slices] Menu</a></h4>
+      <h4><a href="/doc/gui_t3_slices.html">[Devices] Menu</a></h4>
       </div>
+      <br>
+      
       <button type="button" class="collapsible">User Manual (CLI)</button>
       <div class="content">
       <h4><a href="/doc/cli_t1.html">[Step T1] Generate SRC file</a></h4>
@@ -68,6 +75,7 @@
       <h4><a href="/doc/cli_data.html">Load&Save Data in MATLAB</a></h4>
       <h4><a href="/doc/cli_cloud.html">DSI Studio Cloud</a></h4>
       </div>
+      
       <br>
       <h3><a href="/citation.html">Citation</a></h3>
       <h3><a href="https://practicum.labsolver.org">Workshop</a></h3>
