--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
       <h4><a href="/doc/menu_edit.html">[Edit] Menu</a></h4>
       <h4><a href="/doc/menu_regions.html">[Regions] Menu</a></h4>
       <h4><a href="/doc/menu_slices.html">[Slices] Menu</a></h4>
-      <h4><a href="/doc/menu_slices.html">[Devices] Menu</a></h4>
+      <h4><a href="/doc/menu_devices.html">[Devices] Menu</a></h4>
       </div>
       
       <button type="button" class="collapsible">User Manual (CLI)</button>
