--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,9 +78,11 @@
       <h3><a href="https://practicum.labsolver.org">Workshop</a></h3>
       <p><a href="https://sites.google.com/a/labsolver.org/dsi-studio/">Old Documentations</a></p>
       <p>Fang-Cheng (Frank) Yeh<br>
-          <a href="https://www.dropbox.com/s/ej2ujl6fmcvwx8f/Frank_CV.pdf?dl=0">CV</a>, <a href="http://scholar.google.com/citations?user=QdfsoJ4AAAAJ&hl=en">Google Citation</a>, <a href="https://www.webofscience.com/wos/author/record/101404">Researcher Profile</a><br>
+          <a href="https://www.dropbox.com/s/ej2ujl6fmcvwx8f/Frank_CV.pdf?dl=0"><img src="https://img.shields.io/badge/CV-white"></a>
+          <a href="http://scholar.google.com/citations?user=QdfsoJ4AAAAJ&hl=en"><img src="https://img.shields.io/badge/Citation-white"></a>
+          <a href="https://www.webofscience.com/wos/author/record/101404"><img src="https://img.shields.io/badge/Profile-white"></a><br>
           <a href="https://twitter.com/intent/follow?screen_name=FangChengYeh"><img src="https://img.shields.io/twitter/follow/FangChengYeh?style=social&logo=twitter" alt="follow on Twitter"></a><a href="https://www.youtube.com/c/FrankYeh"><img src="https://img.shields.io/youtube/channel/subscribers/UCN6gohY_zeBpK6SwJ7hnz1Q?style=social"></a>
-          <a href="https://space.bilibili.com/1959257334/"><img src="https://img.shields.io/badge/bilibili-blue" alt="follow on bilibili"></a>        
+          <a href="https://space.bilibili.com/1959257334/"><img src="https://img.shields.io/badge/bilibili-blue" alt="follow on bilibili"></a>    
       <p></p>
       <p>Questions: <a href="https://groups.google.com/g/dsi-studio?pli=1" target="_blank">Discussion Forum</a><br>
          Collaborations: frank.yeh@gmail.com</p>
