--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,6 +69,7 @@
       <h4><a href="/doc/cli_ren.html">[Step B1-B2] Rename & Convert DICOM</a></h4>
       <h4><a href="/doc/cli_atk.html">[Step B4] Automatic Fiber Tracking</a></h4>
       <h4><a href="/doc/cli_cnt.html">[Step C3] Correlational Tractography</a></h4>
+      <h4><a href="/doc/cli_exp.html">Export Data</a></h4>
       <h4><a href="/doc/cli_reg.html">Registration</a></h4>
       <h4><a href="/doc/cli_data.html">Load&Save Data in MATLAB</a></h4>
       <h4><a href="/doc/cli_cloud.html">DSI Studio Cloud</a></h4>
