--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,7 @@
       gtag('config', 'G-GV2KQKX4TF');
     </script>
     <meta charset="UTF-8">
-    {% if site.google_analytics and jekyll.environment == 'production' %}
-    {% include analytics.html %}
-    {% include google_network_domain.html %}
+    {% include google-analytics.html %}
     {% endif %}
 {% seo %}
     <link rel="shortcut icon" type="image/x-icon" href="/favicon-16x16.png">
