--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
       <div class="content">
       <h4><a href="/doc/gui_t1.html">[Step T1] Generate SRC file</a></h4>
       <h4><a href="/doc/gui_t2.html">[Step T2] Reconstruction</a></h4>
-      <h4><a href="/doc/gui_t3_whole_brain.html">[Step T3] Whole Brain Tracking & Connectivity Matrix</a></h4>
+      <h4><a href="/doc/gui_t3_whole_brain.html">[Step T3] Tractography & Structural Connectivity</a></h4>
       <h4><a href="/doc/gui_t3_atk.html">[Step T3] AutoTrack & Tractometry</a></h4>
       <h4><a href="/doc/gui_t3_roi_tracking.html">[Step T3] ROI-based Tracking</a></h4>
       <h4><a href="/doc/gui_t3_dt.html">[Step T3] Differential Tractography</a></h4>
