--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,7 @@
       <h4><a href="/doc/how_to_acquire_dmri.html">How to acquire dMRI</a></h4>
       <h4><a href="/doc/how_to_analyze_dmri.html">How to analyze dMRI</a></h4>
       <h4><a href="/doc/how_to_interpret_dmri.html">How to interpret dMRI</a></h4>
+      <h4><a href="/doc/cli_data.html">Data Formats</a></h4>
       
       <button type="button" class="collapsible">User Manual (GUI)</button>
       <div class="content">
@@ -71,7 +72,6 @@
       <h4><a href="/doc/cli_cnt.html">[Step C3] Correlational Tractography</a></h4>
       <h4><a href="/doc/cli_exp.html">Export Data</a></h4>
       <h4><a href="/doc/cli_reg.html">Registration</a></h4>
-      <h4><a href="/doc/cli_data.html">Load&Save Data in MATLAB</a></h4>
       <h4><a href="/doc/cli_cloud.html">DSI Studio Cloud</a></h4>
       </div>
       
