--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,7 @@
       <h4><a href="/doc/gui_t3_dt.html">[Step T3] Differential Tractography</a></h4>
       <h4><a href="/doc/gui_bx.html">[Step B0-B4] Batch Processing</a></h4>
       <h4><a href="/doc/gui_cx.html">[Step C1-C3] Correlational Tractography</a></h4>
+      <h4><a href="/doc/cli_vis.html">GUI-Based Command Line</a></h4>
       </div>
       
       <button type="button" class="collapsible">User Manual (Menu)</button>
@@ -65,7 +66,6 @@
       <h4><a href="/doc/cli_t1.html">[Step T1] Generate SRC file</a></h4>
       <h4><a href="/doc/cli_t2.html">[Step T2] Reconstruction</a></h4>
       <h4><a href="/doc/cli_t3.html">[Step T3] Fiber Tracking</a></h4>
-      <h4><a href="/doc/cli_vis.html">[Step T3] Visualization</a></h4>
       <h4><a href="/doc/cli_ana.html">[Step T3] Region & Tract Analysis</a></h4>
       <h4><a href="/doc/cli_ren.html">[Step B1-B2] Rename & Convert DICOM</a></h4>
       <h4><a href="/doc/cli_atk.html">[Step B4] Automatic Fiber Tracking</a></h4>
