--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
       <h4><a href="/doc/gui_t3_dt.html">[Step T3] Differential Tractography</a></h4>
       <h4><a href="/doc/gui_bx.html">[Step B0-B4] Batch Processing</a></h4>
       <h4><a href="/doc/gui_cx.html">[Step C1-C3] Correlational Tractography</a></h4>
-      <h4><a href="/doc/cli_vis.html">GUI-Based Command Line</a></h4>
+      <h4><a href="/doc/cli_vis.html">Command History</a></h4>
       </div>
       
       <button type="button" class="collapsible">User Manual (Menu)</button>
