--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,11 +45,11 @@
       <h4><a href="/doc/gui_t1.html">[Step T1] Generate SRC file</a></h4>
       <h4><a href="/doc/gui_t2.html">[Step T2] Reconstruction</a></h4>
       <h4><a href="/doc/gui_t3_whole_brain.html">[Step T3] Tractography</a></h4>
-      <h4><a href="/doc/gui_t3_atk.html">[Step T3] AutoTrack</a></h4>
-      <h4><a href="/doc/gui_t3_roi_tracking.html">[Step T3] ROI-based Tracking</a></h4>
-      <h4><a href="/doc/gui_t3_dt.html">[Step T3] Differential Tractography</a></h4>
-      <h4><a href="/doc/gui_bx.html">[Step B0-B4] Batch Processing</a></h4>
-      <h4><a href="/doc/gui_cx.html">[Step C1-C3] Correlational Tractography</a></h4>
+      <h4><a href="/doc/gui_t3_atk.html">AutoTrack & T2R Connectome</a></h4>
+      <h4><a href="/doc/gui_t3_roi_tracking.html">ROI-based Tracking</a></h4>
+      <h4><a href="/doc/gui_t3_dt.html">Differential Tractography</a></h4>
+      <h4><a href="/doc/gui_cx.html">Correlational Tractography</a></h4>
+      <h4><a href="/doc/gui_bx.html">GUI-Based Batch</a></h4>
       <h4><a href="/doc/cli_vis.html">Command History</a></h4>
       </div>
       
