--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,15 +64,15 @@
       
       <button type="button" class="collapsible">User Manual (CLI)</button>
       <div class="content">
-      <h4><a href="/doc/cli_t1.html">[Step T1] Generate SRC file</a></h4>
-      <h4><a href="/doc/cli_t2.html">[Step T2] Reconstruction</a></h4>
-      <h4><a href="/doc/cli_t3.html">[Step T3] Fiber Tracking</a></h4>
-      <h4><a href="/doc/cli_ana.html">[Step T3] Region & Tract Analysis</a></h4>
-      <h4><a href="/doc/cli_ren.html">[Step B1-B2] Rename & Convert DICOM</a></h4>
-      <h4><a href="/doc/cli_atk.html">[Step B4] Automatic Fiber Tracking</a></h4>
-      <h4><a href="/doc/cli_cnt.html">[Step C3] Correlational Tractography</a></h4>
-      <h4><a href="/doc/cli_exp.html">Export Data</a></h4>
-      <h4><a href="/doc/cli_reg.html">Registration</a></h4>
+      <h4><a href="/doc/cli_t1.html">[src] Generate SRC file</a></h4>
+      <h4><a href="/doc/cli_t2.html">[rec] Reconstruction</a></h4>
+      <h4><a href="/doc/cli_t3.html">[trk] Fiber Tracking</a></h4>
+      <h4><a href="/doc/cli_ana.html">[ana] Region & Tract Analysis</a></h4>
+      <h4><a href="/doc/cli_ren.html">[ren] Rename & Convert DICOM</a></h4>
+      <h4><a href="/doc/cli_atk.html">[atk] Automatic Fiber Tracking</a></h4>
+      <h4><a href="/doc/cli_cnt.html">[cnt] Correlational Tractography</a></h4>
+      <h4><a href="/doc/cli_exp.html">[exp] Export Data</a></h4>
+      <h4><a href="/doc/cli_reg.html">[reg] Registration</a></h4>
       </div>
       
       <h3><a href="/citation.html">Citation</a></h3>
