--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,8 +83,7 @@
           <a href="https://www.webofscience.com/wos/author/record/101404"><img src="https://img.shields.io/badge/Profile-white"></a><br>
           <a href="https://twitter.com/intent/follow?screen_name=FangChengYeh"><img src="https://img.shields.io/twitter/follow/FangChengYeh?style=social&logo=twitter" alt="follow on Twitter"></a><a href="https://www.youtube.com/c/FrankYeh"><img src="https://img.shields.io/youtube/channel/subscribers/UCN6gohY_zeBpK6SwJ7hnz1Q?style=social"></a>
           <a href="https://space.bilibili.com/1959257334/"><img src="https://img.shields.io/badge/bilibili-blue" alt="follow on bilibili"></a>    
-
-      <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="pittsburghprofy" data-color="#696969" data-emoji="☕"  data-font="Bree" data-text="Buy me a coffee" data-outline-color="#ffffff" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script>
+          <a href="https://buymeacoffee.com/pittsburghprofy/">☕Buy Me A Coffee</a>
       <p></p>
       <p>Questions: <a href="https://groups.google.com/g/dsi-studio?pli=1" target="_blank">Discussion Forum</a><br>
          Collaborations: frank.yeh@gmail.com</p>
