--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
       <h3><a href="/download.html">Download</a></h3>
       <h3><a href="https://brain.labsolver.org">Data</a></h3>
       <h3>User Support</h3>
-      <h4><a href="https://groups.google.com/g/dsi-studio?pli=1" target="_blank">Discussion Forum (Old)</a></h4>
-      <h4><a href="https://www.reddit.com/r/dsistudio/" target="_blank">Discussion Forum (New)</a></h4>
+      <h4><a href="https://www.reddit.com/r/dsistudio/" target="_blank">Forum (New/Reddit)</a></h4>
+      <h4><a href="https://groups.google.com/g/dsi-studio?pli=1" target="_blank">Forum (Old)</a></h4>
       <h4><a href="https://www.dropbox.com/request/W0hJkAIVC2keWAjqtqvU" target="_blank">Data Upload</a></h4>
 
       <h3>Tutorials</h3>
